Adding API, and fetch data

--- a/index.html
+++ b/index.html
@@ -23,31 +23,27 @@
 			<label for="ammount">Enter Ammount</label>
 			<input type="text" placeholder="Ammount" id="ammount">
 			<div class="settings">
-				<div class="from">
+				<div class="from text-center">
 					<label for="from">From</label>
 					<select name="" id="from">
-						<option value="">USD</option>
-						<option value="">EUR</option>
 					</select>
 				</div>
-				<div class="symbol">
+				<div class="symbol text-center">
 					<i class="fa-solid fa-repeat"></i>
 				</div>
-				<div class="to">
+				<div class="to text-center">
 					<label for="to">To</label>
 					<select name="" id="to">
-						<option value="">USD</option>
-						<option value="">EUR</option>
 					</select>
 				</div>
 			</div>
 			<div class="rate">
-				<div class="to"><span>1</span><span> Eu</span></div>
+				<div class="from"><span></span><span> </span><span></span></div>
 				<div class="equal">=</div>
-				<div class="to"><span>11.232565</span><span> MAD</span></div>
+				<div class="to"><span></span><span> </span><span></span></div>
 			</div>
 		</form>
-		<button>Get Exchange Rate</button>
+		<button class="exchange">Get Exchange Rate</button>
 		<div class="result fs-3">
 			3332
 		</div>
