--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<form action="">
 			<label for="ammount">Enter Ammount</label>
 			<input type="text" placeholder="Ammount" id="ammount">
-			<div class="settings">
+			<div class="settings" data-tmp="false">
 				<div class="from text-center">
 					<label for="from">From</label>
 					<select name="" id="from">
