Add Switch Settings Animations and Logic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<form action="">
 			<label for="ammount">Enter Ammount</label>
 			<input type="text" placeholder="Ammount" id="ammount">
-			<div class="settings" data-tmp="false">
+			<div class="settings">
 				<div class="from">
 					<label for="from">From</label>
 					<div class="drop text-center">
