Add instructions sections

--- a/index.html
+++ b/index.html
@@ -85,7 +85,96 @@
 			</div>
 		</div>
 	</section>
-	<section class="instructions" id="instructions"></section>
+	<section class="instructions pb-5 pt-5" id="instructions">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 icon"><i class="fa-regular fa-circle-question"></i></div>
+				<div class="col-lg-6">
+					<div class="info pt-5">
+						<p class="fs-5 lh-sm">Welcome To Currency Converter Pro</p>
+						<h2 class="fs-1 text-white fw-bold">Lest's Convert Following These Instructions</h2>
+						<p class="fs-5 lh-base text-white">Easily convert between different currencies with just a few clicks.
+							Follow these
+							simple steps:</p>
+					</div>
+					<div class="instruction">
+						<div class="row">
+							<div class="col-3 text">
+								<div class="number d-flex justify-content-center">
+									<span>1</span>
+									<i class="fa-solid fa-dollar-sign"></i>
+								</div>
+							</div>
+							<div class="col-9">
+								<div class="instruction-info">
+									<h3>From</h3>
+									<p>
+										Select the source currency from the dropdown list
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="instruction">
+						<div class="row">
+							<div class="col-3">
+								<div class="number d-flex justify-content-center">
+									<span>2</span>
+									<i class="fa-solid fa-keyboard"></i>
+								</div>
+							</div>
+							<div class="col-9">
+								<div class="instruction-info">
+									<h3>Ammount</h3>
+									<p>
+										Enter the amount you want to convert.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="instruction">
+						<div class="row">
+							<div class="col-3">
+								<div class="number d-flex justify-content-center">
+									<span>3</span>
+									<i class="fa-solid fa-yen-sign"></i>
+								</div>
+							</div>
+							<div class="col-9">
+								<div class="instruction-info">
+									<h3>To</h3>
+									<p>
+										Choose the target currency you want to convert to.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="instruction">
+						<div class="row">
+							<div class="col-3">
+								<div class="number d-flex justify-content-center">
+									<span>4</span>
+									<i class="fa-solid fa-repeat"></i>
+								</div>
+							</div>
+							<div class="col-9">
+								<div class="instruction-info">
+									<h3>Convert</h3>
+									<p>
+										Click the "Convert" button and get instant, accurate results.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+	</section>
 	<section class="converter" id="converter">
 		<h3>Currency Converter</h3>
 		<form action="">
