Fixing Responsiveness of instructions sections

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 	<section class="instructions pb-5 pt-5" id="instructions">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 icon"><i class="fa-regular fa-circle-question"></i></div>
+				<div class="col-lg-6 icon text-center text-lg-start"><i class="fa-regular fa-circle-question"></i></div>
 				<div class="col-lg-6">
-					<div class="info pt-5">
+					<div class="info pt-5 text-center text-lg-start mb-5">
 						<p class="fs-5 lh-sm">Welcome To Currency Converter Pro</p>
 						<h2 class="fs-1 text-white fw-bold">Lest's Convert Following These Instructions</h2>
 						<p class="fs-5 lh-base text-white">Easily convert between different currencies with just a few clicks.
