Add outline script, and make loader more modular

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 								<img src="images/coin.jpg" alt="Coin">
 								<p class="ps-2 pt-2 pb-3 text-center">Global Currency Support</p>
 								<div class="outline d-flex justify-content-around fs-5">
-									<div><span>1</span><span> </span><span>USD</span></div>
+									<div class="from"><span></span><span> </span><span></span></div>
 									<div>=</div>
-									<div><span>9.8</span><span> </span><span>MAD</span></div>
+									<div class="to"><span></span><span> </span><span></span></div>
 								</div>
 							</div>
 						</div>
