--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<h1 class="fs-1 fw-bold lh-base text-center text-lg-end text-white">Meet Our Currency Converter</h1>
+					<h1 class="fs-1 fw-bold lh-base text-center text-lg-end">Meet Our Currency Converter</h1>
 				</div>
 			</div>
 		</div>
@@ -270,7 +270,7 @@
 		</div>
 	</section>
 	<section class="about" id="about">
-		<div class="container text-center lh-lg fs-5 text-white">
+		<div class="container text-center lh-lg text-white">
 			<h3 class="text-center fs-1 fw-bold mb-5">About Us</h3>
 			<p>
 				Currency Converter Pro is committed to providing you with a seamless and efficient currency conversion
